--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ title                    : "THINVY SPACE"
 title_separator          : "-"
 name                     : &name "Thinvy"
 description              : &description "personal description"
-url                      : https://ThinvySpace.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+url                      : "https://ThinvySpace.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : "https://ThinvySpace.github.io" # the subpath of your site, e.g. "/blog"
 repository               : "https://ThinvySpace.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
@@ -21,7 +21,7 @@ repository               : "https://ThinvySpace.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "https://raw.githubusercontent.com/ThinvySpace/ThinvySpace.github.io/master/images/myphoto.jpeg"
   name             : "QINGYU LAN [兰清宇]"
   pronouns         : # example: "she/her"  
   bio              : "ML Algorithm Deployment Engineer"
