--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   bio              : "ML Algorithm Deployment Engineer"
   location         : "Shenzhen, CHINA"
   employer         : "Xidian University"
-  uri              : https://ThinvySpace.github.io
+  uri              : "https://ThinvySpace.github.io"
   email            : "qingyulann@foxmail.com" 
 
   # Academic websites
