--- a/_config.yml
+++ b/_config.yml
@@ -24,10 +24,10 @@ author:
   avatar           : "https://raw.githubusercontent.com/ThinvySpace/ThinvySpace.github.io/master/images/myphoto.jpeg"
   name             : "QINGYU LAN [兰清宇]"
   pronouns         : # example: "she/her"  
-  bio              : "ML Algorithm Deployment Engineer"
+  bio              : "ML Algorithm Deployment Engineer of DJI"
   location         : "Shenzhen, CHINA"
   employer         : "Xidian University"
-  uri              : ""
+  uri              : # ""
   email            : "qingyulann@foxmail.com" 
 
   # Academic websites
@@ -42,7 +42,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "https://github.com/thinvy"
+  github           : ""
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
