--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ author:
   wikipedia        : # Username
   xing             : # Username
   youtube          : # Username
-  zhihu            : # URL
+  zhihu            : https://www.zhihu.com/people/bei-chen-fan-xing-53
 
 
 # Site Settings
